--- a/.github/workflows/Convert Rules to MRS.yml
+++ b/.github/workflows/Convert Rules to MRS.yml
@@ -37,17 +37,17 @@ jobs:
       - name: Convert rules
         run: |
           mkdir -p output
-          exclude_list=("example.yaml" "example.yaml")
-          for file in $(find rule -type f -name "*.yaml"); do
+          exclude_list=("example.list" "example.list")
+          for file in $(find rule -type f -name "*.list"); do
             filename=$(basename "$file")
             if [[ " ${exclude_list[@]} " =~ " ${filename} " ]]; then
               echo "Skip file: $filename"
               continue
             fi
             if [[ "$filename" == *ip* ]]; then
-              mihomo convert-ruleset ipcidr yaml "$file" "output/${filename%.yaml}.mrs"
+              mihomo convert-ruleset ipcidr list "$file" "output/${filename%.list}.mrs"
             else
-              mihomo convert-ruleset domain yaml "$file" "output/${filename%.yaml}.mrs"
+              mihomo convert-ruleset domain list "$file" "output/${filename%.list}.mrs"
             fi
           done
 
