--- a/.github/workflows/Convert Rules to MRS.yml
+++ b/.github/workflows/Convert Rules to MRS.yml
@@ -1,9 +1,12 @@
 name: Convert Rules to MRS
+run-name: Convert Rules to MRS
 
 on:
   push:
     branches:
       - main
+    paths:
+      - 'rule/**'
   workflow_dispatch:
 
 permissions:
