--- a/.github/workflows/Cleanup Workflow Records.yml
+++ b/.github/workflows/Cleanup Workflow Records.yml
@@ -2,10 +2,10 @@ name: Cleanup Workflow Records
 run-name: Cleanup Workflow Records
 
 on:
-  #workflow_run:
-    #workflows: ["Convert Rules to MRS"]
-    #types:
-    #  - completed
+  workflow_run:
+    workflows: ["Convert Rules to MRS"]
+    types:
+      - completed
   workflow_dispatch:
 
 permissions:
